packages/flutter/lib/src/bindings.g.dart


  static VoicevoxUserDictWordType fromValue(int value) => switch (value) {
        0 => VOICEVOX_USER_DICT_WORD_TYPE_PROPER_NOUN,
        1 => VOICEVOX_USER_DICT_WORD_TYPE_COMMON_NOUN,
        2 => VOICEVOX_USER_DICT_WORD_TYPE_VERB,
        3 => VOICEVOX_USER_DICT_WORD_TYPE_ADJECTIVE,
        4 => VOICEVOX_USER_DICT_WORD_TYPE_SUFFIX,
        _ => throw ArgumentError(
            "Unknown value for VoicevoxUserDictWordType: $value"),
      };
}

typedef VoicevoxUserDictWordType1 = ffi.Int32;
typedef DartVoicevoxUserDictWordType = int;

final class OpenJtalkRc extends ffi.Opaque {}

final class VoicevoxOnnxruntime extends ffi.Opaque {}

final class VoicevoxSynthesizer extends ffi.Opaque {}

final class VoicevoxUserDict extends ffi.Opaque {}

final class VoicevoxVoiceModelFile extends ffi.Opaque {}

/// ::voicevox_onnxruntime_load_once のオプション。
final class VoicevoxLoadOnnxruntimeOptions extends ffi.Struct {
  /// ONNX Runtimeのファイル名（モジュール名）もしくはファイルパスを指定する。
  external ffi.Pointer<ffi.Char> filename;
}

/// ::voicevox_synthesizer_new のオプション。
final class VoicevoxInitializeOptions extends ffi.Struct {
  /// ハードウェアアクセラレーションモード
  @VoicevoxAccelerationMode1()
  external int acceleration_mode;

  /// CPU利用数を指定 0を指定すると環境に合わせたCPUが利用される
  @ffi.Uint16()
  external int cpu_num_threads;
}

/// 音声モデルID。
typedef VoicevoxVoiceModelId = ffi.Pointer<ffi.Pointer<ffi.Uint8>>;

/// スタイルID。
typedef VoicevoxStyleId = ffi.Uint32;
typedef DartVoicevoxStyleId = int;

/// ::voicevox_synthesizer_synthesis のオプション。
final class VoicevoxSynthesisOptions extends ffi.Struct {
  /// 疑問文の調整を有効にする
  @ffi.Bool()
  external bool enable_interrogative_upspeak;
}

/// ::voicevox_synthesizer_tts のオプション。
final class VoicevoxTtsOptions extends ffi.Struct {
  /// 疑問文の調整を有効にする
  @ffi.Bool()
  external bool enable_interrogative_upspeak;
}

/// ユーザー辞書の単語。
final class VoicevoxUserDictWord extends ffi.Struct {
  /// 表記
  external ffi.Pointer<ffi.Char> surface;

  /// 読み
  external ffi.Pointer<ffi.Char> pronunciation;

  /// アクセント型
  @ffi.UintPtr()
  external int accent_type;

  /// 単語の種類
  @VoicevoxUserDictWordType1()
  external int word_type;

  /// 優先度
  @ffi.Uint32()
  external int priority;
}

const int true1 = 1;

const int false1 = 0;

const int TARGET_OS_RTKIT = 0;

const int TARGET_RT_LITTLE_ENDIAN = 1;

const int TARGET_RT_BIG_ENDIAN = 0;

const int TARGET_RT_64_BIT = 1;

const int TARGET_RT_MAC_CFM = 0;

const int TARGET_RT_MAC_MACHO = 1;

const int TARGET_CPU_ARM64 = 1;

const int TARGET_CPU_PPC = 0;

const int TARGET_CPU_PPC64 = 0;

const int TARGET_CPU_68K = 0;

const int TARGET_CPU_X86 = 0;

const int TARGET_CPU_X86_64 = 0;

const int TARGET_CPU_ARM = 0;

const int TARGET_CPU_MIPS = 0;

const int TARGET_CPU_SPARC = 0;

const int TARGET_CPU_ALPHA = 0;

const int TARGET_ABI_USES_IOS_VALUES = 1;
